--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -7,7 +7,7 @@ FROM nginx:alpine
 
 COPY index.html /usr/share/nginx/html/
 
-COPY style.css /usr/share/nginx/html/
+COPY styles.css /usr/share/nginx/html/
 
 COPY script.js /usr/share/nginx/html/
 
